--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,32 +1,18 @@
-[res://Scenes/CharacterControler.gd]
+[res://Scripts/ControllerCharacter.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 120,
+"scroll_position": 65.3333,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/Controller_Character.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 40,
-"scroll_position": 17.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://debug_ui.gd]
+[res://Scripts/DebugUI.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
