--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,9 @@
-list=[]
+list=[{
+"base": &"Node",
+"class": &"AnimationComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://animation_component.gd"
+}]
