--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,10 +30,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-899
+center_split_offset=-338
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
-selected_bottom_panel_item=5
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(3840, 29)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/animation_component.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd"]
-selected_script="res://Scripts/DebugUI.gd"
+selected_script="res://Scripts/ControllerCharacter.gd"
 open_help=[]
 script_split_offset=250
 list_split_offset=0
