--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/animation_component.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/grid-cursor.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
+open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn", "res://MARKER.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-781
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/animation_component.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd"]
-selected_script="res://Scripts/animation_component.gd"
+open_scripts=["res://Scripts/animation_component.gd", "res://ControllerAnimation.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://ControllerInput.gd", "res://Scripts/DebugUI.gd"]
+selected_script="res://Scripts/ControllerCharacter.gd"
 open_help=[]
 script_split_offset=250
 list_split_offset=0
