--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 114,
-"scroll_position": 95.0,
+"row": 313,
+"scroll_position": 296.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,35 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 46,
-"scroll_position": 13.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ControllerAnimation.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 83,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ControllerInput.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 83,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
