--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,4 +6,20 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/animation_component.gd"
+}, {
+"base": &"Node",
+"class": &"AnimationController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://ControllerAnimation.gd"
+}, {
+"base": &"Node",
+"class": &"InputComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://ControllerInput.gd"
 }]
