--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 54.0,
-"selection": false,
+"row": 85,
+"scroll_position": 68.0,
+"selection": true,
+"selection_from_column": 41,
+"selection_from_line": 85,
+"selection_to_column": 43,
+"selection_to_line": 85,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 49.0,
+"row": 202,
+"scroll_position": 169.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
