--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gur
 current_scene="res://SCENE.tscn"
 center_split_offset=-781
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(3840, 29)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/animation_component.gd", "res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://InputComponent.gd", "res://Scripts/DebugUI.gd"]
-selected_script="res://Scripts/ControllerCharacter.gd"
+selected_script="res://InputComponent.gd"
 open_help=[]
 script_split_offset=250
 list_split_offset=0
