--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -21,5 +21,13 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://InputComponent.gd"
+"path": "res://Scripts/InputComponent.gd"
+}, {
+"base": &"Node",
+"class": &"NavigationComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/NavigationComponent.gd"
 }]
