--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn", "res://MARKER.tscn")
+open_scenes=PackedStringArray("res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-781
 selected_default_debugger_tab_idx=0
