--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://InputManager.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/NavigationComponent.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=271
+dock_hsplit_2=270
 dock_hsplit_3=-680
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -30,10 +30,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-781
+center_split_offset=-516
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,12 +43,12 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://AnimationController.gd", "res://Scripts/animation_component.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd", "res://InputManager.gd", "res://Scripts/NavigationComponent.gd"]
-selected_script="res://Scripts/NavigationComponent.gd"
+open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://InputManager.gd", "res://Scripts/NavigationComponent.gd"]
+selected_script="res://Scripts/ControllerCamera.gd"
 open_help=[]
 script_split_offset=250
 list_split_offset=0
-zoom_factor=1.00144
+zoom_factor=0.859428
 
 [GameView]
 
