--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -29,3 +29,7 @@ MeshInstance3D:scale=false
 
 picker_shape=3
 recent_presets=PackedColorArray(0.0421216, 0.0421216, 0.0421216, 1)
+
+[game_view]
+
+embed_size_mode=2
