--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/ControllerCharacter.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-516
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,10 +43,10 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://InputManager.gd"]
-selected_script="res://Scripts/ControllerCamera.gd"
+open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd"]
+selected_script="res://AnimationController.gd"
 open_help=[]
-script_split_offset=250
+script_split_offset=520
 list_split_offset=0
 zoom_factor=0.859428
 
