--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-516
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(3840, 29)
 [ScriptEditor]
 
 open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd"]
-selected_script="res://AnimationController.gd"
+selected_script="res://Scripts/ControllerCamera.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=0.859428
 
 [GameView]
 
-floating_window_rect=Rect2i(5304, 675, 1168, 707)
+floating_window_rect=Rect2i(4648, 243, 1996, 1163)
 floating_window_screen=0
 
 [ShaderEditor]
