--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/ControllerCharacter.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=269
+dock_hsplit_2=268
 dock_hsplit_3=-680
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -44,7 +44,7 @@ position=Vector2i(3840, 29)
 [ScriptEditor]
 
 open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd"]
-selected_script="res://Scripts/ControllerCamera.gd"
+selected_script="res://Scripts/ControllerCharacter.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=0.859428
 
 [GameView]
 
-floating_window_rect=Rect2i(4648, 243, 1996, 1163)
+floating_window_rect=Rect2i(5304, 675, 1168, 707)
 floating_window_screen=0
 
 [ShaderEditor]
