polling instead of signals

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -44,7 +44,7 @@ position=Vector2i(3840, 29)
 [ScriptEditor]
 
 open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd"]
-selected_script="res://Scripts/ControllerCharacter.gd"
+selected_script="res://AnimationController.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
