--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/ClickNavigationComponent.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=268
-dock_hsplit_3=-680
+dock_hsplit_2=319
+dock_hsplit_3=-612
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,9 +28,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn")
+open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-314
+center_split_offset=-993
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -39,12 +39,12 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(3840, 29)
+position=Vector2i(0, 88)
 
 [ScriptEditor]
 
-open_scripts=["res://AnimationController.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/InputComponent.gd"]
-selected_script="res://Scripts/InputComponent.gd"
+open_scripts=["res://Scripts/AnimationController.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
+selected_script="res://Scripts/AnimationController.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
