--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,13 +5,21 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://AnimationController.gd"
+"path": "res://Scripts/AnimationController.gd"
 }, {
 "base": &"Node",
-"class": &"InputComponent",
+"class": &"ClickNavigationComponent",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/InputComponent.gd"
+"path": "res://Scripts/ClickNavigationComponent.gd"
+}, {
+"base": &"Node",
+"class": &"GamepadInputComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/GamepadComponent.gd"
 }]
