--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -43,8 +43,8 @@ position=Vector2i(0, 88)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/AnimationController.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
-selected_script="res://Scripts/AnimationController.gd"
+open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
+selected_script="res://Scripts/ControllerCamera.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
