--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/AnimationController.gd"
 }, {
+"base": &"Node3D",
+"class": &"CameraFocusPoint",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://CameraFocusPoint.gd"
+}, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
 "icon": "",
