--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -10,6 +10,7 @@ scripts=["res://CameraFocusPoint.gd", "res://Scripts/GamepadComponent.gd"]
 [dialog_bounds]
 
 create_new_node=Rect2(1156, 630, 1800, 1400)
+project_settings=Rect2(856, 630, 2400, 1400)
 
 [script_setup]
 
