--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 127,
-"scroll_position": 100.0,
+"row": 47,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 151,
-"scroll_position": 124.0,
+"row": 102,
+"scroll_position": 74.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 211,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 2,
-"selection_to_column": 35,
-"selection_to_line": 2,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
