animation blending debug

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 31.0,
-"selection": false,
+"row": 31,
+"scroll_position": 14.0,
+"selection": true,
+"selection_from_column": 27,
+"selection_from_line": 31,
+"selection_to_column": 30,
+"selection_to_line": 31,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 5.0,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 102,
-"scroll_position": 115.0,
+"row": 129,
+"scroll_position": 81.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 123,
-"scroll_position": 97.0,
+"row": 129,
+"scroll_position": 105.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 252,
-"scroll_position": 217.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
