--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://SCENE.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/PS_Character_Gurl.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=319
-dock_hsplit_3=-421
+dock_hsplit_2=318
+dock_hsplit_3=-420
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Assets/ps_character_gurl.tscn", "res://SCENE.tscn")
-current_scene="res://SCENE.tscn"
-center_split_offset=-657
-selected_default_debugger_tab_idx=0
+current_scene="res://Assets/ps_character_gurl.tscn"
+center_split_offset=-1023
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=5
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 88)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
-selected_script="res://Scripts/ClickNavigationComponent.gd"
+selected_script="res://Scripts/AnimationController.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
