--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,9 +31,8 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Assets/ps_character_gurl.tscn", "res://SCENE.tscn")
 current_scene="res://Assets/ps_character_gurl.tscn"
 center_split_offset=-1023
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=5
 
 [EditorWindow]
 
@@ -48,7 +47,7 @@ selected_script="res://Scripts/AnimationController.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
-zoom_factor=0.859428
+zoom_factor=nan
 
 [GameView]
 
