--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -33,6 +33,7 @@ current_scene="res://Assets/ps_character_gurl.tscn"
 center_split_offset=-1023
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=5
 
 [EditorWindow]
 
