--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/PS_Character_Gurl.glb")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/ps_character_gurl.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Assets/ps_character_gurl.tscn", "res://SCENE.tscn")
-current_scene="res://SCENE.tscn"
+open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
+current_scene="res://Assets/ps_character_gurl.tscn"
 center_split_offset=-1023
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=5
 
 [EditorWindow]
 
