--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
-current_scene="res://Assets/ps_character_gurl.tscn"
+current_scene="res://SCENE.tscn"
 center_split_offset=-1023
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
