--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=318
-dock_hsplit_3=-420
+dock_hsplit_3=-614
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
-current_scene="res://SCENE.tscn"
-center_split_offset=-1023
+current_scene="res://Assets/ps_character_gurl.tscn"
+center_split_offset=-1076
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=5
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 88)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
-selected_script="res://Scripts/ClickNavigationComponent.gd"
+selected_script="res://Scripts/AnimationController.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
