--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,6 +15,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://CameraFocusPoint.gd"
 }, {
+"base": &"Resource",
+"class": &"CameraState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraState.gd"
+}, {
+"base": &"Node",
+"class": &"CameraStateComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraStateComponent.gd"
+}, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
 "icon": "",
