--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/MovementStates/Idle.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/MovementStates/Airborne.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/MovementStates/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -44,7 +44,7 @@ position=Vector2i(0, 88)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/CameraState.gd"]
-selected_script="res://Scripts/CameraStateComponent.gd"
+selected_script="res://Scripts/CameraState.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
