camera controroler update

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=318
-dock_hsplit_3=-614
+dock_hsplit_2=317
+dock_hsplit_3=-613
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -39,11 +39,11 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 88)
+position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/CameraState.gd"]
+open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
 selected_script="res://Scripts/ControllerCamera.gd"
 open_help=[]
 script_split_offset=520
@@ -52,7 +52,7 @@ zoom_factor=nan
 
 [GameView]
 
-floating_window_rect=Rect2i(5304, 675, 1168, 707)
+floating_window_rect=Rect2i(4920, 459, 1936, 1139)
 floating_window_screen=0
 
 [ShaderEditor]
