--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/MovementStates/Airborne.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/MovementStates/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/CharacterStateMachine.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/MovementStates/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -43,8 +43,8 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/AnimationController.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd"]
-selected_script="res://Scripts/ClickNavigationComponent.gd"
+open_scripts=["res://Scripts/StateMachine/CombatStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CombatStates/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CombatStates/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CombatStates/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/StateMachine/MovementStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CombatStates/StunnedState.gd"]
+selected_script="res://Scripts/StateMachine/MovementStates/GroundedState.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
