--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"BaseMovementState",
+"class": &"AirborneState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CombatStates/AirborneState.gd"
+}, {
 "base": &"Node",
 "class": &"AnimationController",
 "icon": "",
@@ -6,6 +14,30 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/AnimationController.gd"
+}, {
+"base": &"BaseMovementState",
+"class": &"AttackingState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CombatStates/AttackinState.gd"
+}, {
+"base": &"State",
+"class": &"BaseMovementState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/BaseMovementState.gd"
+}, {
+"base": &"BaseMovementState",
+"class": &"BlockingState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CombatStates/BlockingState.gd"
 }, {
 "base": &"Node3D",
 "class": &"CameraFocusPoint",
@@ -31,6 +63,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/CameraStateComponent.gd"
 }, {
+"base": &"StateMachine",
+"class": &"CharacterStateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CharacterStateMachine.gd"
+}, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
 "icon": "",
@@ -39,6 +79,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/ClickNavigationComponent.gd"
 }, {
+"base": &"BaseMovementState",
+"class": &"ClimbingState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CombatStates/ClimbingState.gd"
+}, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
 "icon": "",
@@ -46,4 +94,36 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/GamepadComponent.gd"
+}, {
+"base": &"BaseMovementState",
+"class": &"GroundedState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/MovementStates/GroundedState.gd"
+}, {
+"base": &"RefCounted",
+"class": &"State",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/State.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/StateMachine.gd"
+}, {
+"base": &"BaseMovementState",
+"class": &"StunnedState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/CombatStates/StunnedState.gd"
 }]
