--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CameraStateComponent.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/CharacterStates/", "res://Scripts/StateMachine/CharacterStates/Combat/", "res://Scripts/MovementStates/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CameraStateMachine/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/CharacterStates/Combat/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -43,8 +43,8 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/StateMachine/CharacterStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CharacterStates/Combat/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CharacterStates/Combat/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CharacterStates/Combat/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/StateMachine/CharacterStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CharacterStates/Combat/StunnedState.gd"]
-selected_script="res://Scripts/CameraStateComponent.gd"
+open_scripts=["res://Scripts/StateMachine/CharacterStates/AirborneState.gd", "res://Scripts/Controllers/AnimationController.gd", "res://Scripts/StateMachine/CharacterStates/Combat/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CharacterStates/Combat/BlockingState.gd", "res://Scripts/CameraStateMachine/CameraFocusPoint.gd", "res://Scripts/CameraStateMachine/CameraState.gd", "res://Scripts/CameraStateMachine/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CharacterStates/Combat/ClimbingState.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/StateMachine/CharacterStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CharacterStates/Combat/StunnedState.gd"]
+selected_script="res://Scripts/CameraStateMachine/CameraStateComponent.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
