--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CharacterStateMachine/CharacterStateMachine.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CharacterStateMachine/CharacterStatesBase.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/CharacterStateMachine/", "res://Scripts/CharacterStateMachine/States/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-137
+dock_split_2=147
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=416
-dock_hsplit_3=-274
+dock_hsplit_3=-273
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -33,18 +33,19 @@ current_scene="res://SCENE.tscn"
 center_split_offset=-459
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
 position=Vector2i(4976, 431)
-size=Vector2i(2293, 1375)
+size=Vector2i(2615, 1530)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraStateMachine/CameraState.gd", "res://Scripts/CameraStateMachine/CameraStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/StateMachine.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
-selected_script="res://Scripts/Controllers/AnimationController.gd"
+open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraStateMachine/CameraState.gd", "res://Scripts/CameraStateMachine/CameraStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateAirborne.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
+selected_script="res://Scripts/CharacterStateMachine/CharacterStatesBase.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -52,7 +53,7 @@ zoom_factor=nan
 
 [GameView]
 
-floating_window_rect=Rect2i(5612, 660, 1936, 1139)
+floating_window_rect=Rect2i(4920, 459, 1936, 1139)
 floating_window_screen=0
 
 [ShaderEditor]
