--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CameraStateMachine/X/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/CharacterStateMachine/States/", "res://Scripts/CameraStateMachine/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/_Debug/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/CharacterStateMachine/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-459
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -44,8 +44,8 @@ size=Vector2i(2615, 1530)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraStateMachine/CameraResponder.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateAirborne.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
-selected_script="res://Scripts/CameraStateMachine/CameraResponder.gd"
+open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraResponder.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateAirborne.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
+selected_script="res://Scripts/CameraResponder.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -65,8 +65,8 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=true
