--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"row": 222,
+"scroll_position": 208.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 78,
+"column": 24,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 281,
-"row": 261,
-"scroll_position": 236.0,
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 108,
-"scroll_position": 95.0,
+"row": 111,
+"scroll_position": 93.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 23.0,
-"selection": true,
-"selection_from_column": 15,
-"selection_from_line": 36,
-"selection_to_column": 20,
-"selection_to_line": 36,
+"row": 379,
+"scroll_position": 352.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -189,11 +185,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
-"scroll_position": 57.0,
+"row": 33,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,11 +227,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 12.0,
+"row": 304,
+"scroll_position": 281.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
