--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,22 +30,22 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-459
-selected_default_debugger_tab_idx=1
+center_split_offset=-813
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(4520, 543)
-size=Vector2i(2511, 1530)
+mode="maximized"
+position=Vector2i(3840, 29)
+size=Vector2i(3248, 1530)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraResponder.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateAirborne.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
-selected_script="res://Scripts/Controllers/ControllerCamera.gd"
+selected_script="res://Scripts/InputComponents/ClickNavigationComponent.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -71,4 +71,4 @@ log_filter_1=true
 log_filter_3=true
 log_filter_4=true
 collapse=false
-show_search=true
+show_search=false
