--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -8,12 +8,20 @@ list=[{
 "path": "res://Scripts/Controllers/AnimationController.gd"
 }, {
 "base": &"Node",
+"class": &"CameraCinema",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraRig/CameraCinema.gd"
+}, {
+"base": &"Node",
 "class": &"CameraResponder",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CameraResponder.gd"
+"path": "res://Scripts/CameraRig/CameraResponder.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
