--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 149,
-"scroll_position": 134.0,
+"row": 259,
+"scroll_position": 234.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -36,11 +36,7 @@ state={
 "h_scroll_position": 0,
 "row": 262,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 262,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
